k8s/argocd-image-updater.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-image-updater
  namespace: argocd
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-image-updater
  template:
    metadata:
      labels:
        app.kubernetes.io/name: argocd-image-updater
    spec:
      containers:
      - command:
        - /usr/local/bin/argocd-image-updater
        - run
        image: quay.io/argoprojlabs/argocd-image-updater:v0.12.2
        imagePullPolicy: Always
        name: argocd-image-updater
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: 512Mi
          requests:
            memory: 256Mi
        volumeMounts:
        - mountPath: /app/config
          name: image-updater-conf
        - mountPath: /app/config/ssh
          name: ssh-config
        - mountPath: /tmp
          name: tmp-dir
      serviceAccountName: argocd-image-updater
      volumes:
      - configMap:
          items:
          - key: registries.conf
            path: registries.conf
          - key: log.level
            path: log_level
          name: argocd-image-updater-config
        name: image-updater-conf
      - configMap:
          name: argocd-image-updater-ssh-config
        name: ssh-config
      - emptyDir: {}
        name: tmp-dir
